# opencv_gpu_video_reader

./: CMakeLists.txt  README.md  dynlink_nvcuvid.cpp  video_reader.cpp
